force-app/main/default/objects/Limit_Tracker__c/Limit_Tracker__c.object-meta.xml
<CustomObject>
    <description>Object to track limit consumption of a discrete piece of code.</description>
    <label>Limit Tracker</label>
    <nameField>
        <label>Limit Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Limit Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>