force-app/main/default/objects/Limit_Tracker__c/fields/CPU_Alert_Change__c.field-meta.xml
<CustomField>
    <fullName>CPU_Alert_Change__c</fullName>
    <description>If the CPU consumption increases by this percentage between snapshots raise an alert.</description>
    <label>CPU Alert Change</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>