force-app/main/default/objects/Limit_Tracker__c/fields/CPU_Alert_Threshold_1__c.field-meta.xml
<CustomField>
    <fullName>CPU_Alert_Threshold_1__c</fullName>
    <description>Alert if the CPU consumption exceeds this threshold</description>
    <label>CPU Alert Threshold 1</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>