force-app/main/default/objects/Limit_Tracker__c/fields/CPU_Last__c.field-meta.xml
<CustomField>
    <fullName>CPU_Last__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The last CPU time recorded</description>
    <label>CPU Last</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>