force-app/main/default/objects/Limit_Tracker__c/fields/CPU_Max__c.field-meta.xml
<CustomField>
    <fullName>CPU_Max__c</fullName>
    <description>The maximum CPU time consumed from the retained snapshots</description>
    <label>CPU Max</label>
    <summarizedField>Limit_Tracker_Snapshot__c.CPU__c</summarizedField>
    <summaryForeignKey>Limit_Tracker_Snapshot__c.Limit_Tracker__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>