force-app/main/default/objects/Limit_Tracker__c/fields/CPU_Min__c.field-meta.xml
<CustomField>
    <fullName>CPU_Min__c</fullName>
    <description>Minimum CPU consumption from the retained snapshots</description>
    <label>CPU Min</label>
    <summarizedField>Limit_Tracker_Snapshot__c.CPU__c</summarizedField>
    <summaryForeignKey>Limit_Tracker_Snapshot__c.Limit_Tracker__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>