force-app/main/default/objects/Limit_Tracker__c/fields/DML_Records_Alert_Threshold_1__c.field-meta.xml
<CustomField>
    <fullName>DML_Records_Alert_Threshold_1__c</fullName>
    <description>Alert if the DML records consumption exceeds this threshold</description>
    <label>DML Records Alert Threshold 1</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>