force-app/main/default/objects/Limit_Tracker__c/fields/DML_Records_Last__c.field-meta.xml
<CustomField>
    <fullName>DML_Records_Last__c</fullName>
    <formula>Last_Snapshot__r.DML_Records__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DML Records Last</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>