force-app/main/default/objects/Limit_Tracker__c/fields/DML_Records_Max__c.field-meta.xml
<CustomField>
    <fullName>DML_Records_Max__c</fullName>
    <description>The maximum value of the DML records value from the related snapshots.</description>
    <label>DML Records Max</label>
    <summarizedField>Limit_Tracker_Snapshot__c.DML_Records__c</summarizedField>
    <summaryForeignKey>Limit_Tracker_Snapshot__c.Limit_Tracker__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>