force-app/main/default/objects/Limit_Tracker__c/fields/DML_Statements_Alert_Change__c.field-meta.xml
<CustomField>
    <fullName>DML_Statements_Alert_Change__c</fullName>
    <description>If the DML statements consumption increases by this percentage between snapshots raise an alert.</description>
    <label>DML Statements Alert Change</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>