force-app/main/default/objects/Limit_Tracker__c/fields/DML_Statements_Last__c.field-meta.xml
<CustomField>
    <fullName>DML_Statements_Last__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The last recorded DML statements value.</description>
    <label>DML Statements Last</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>