force-app/main/default/objects/Limit_Tracker__c/fields/DML_Statements_Max__c.field-meta.xml
<CustomField>
    <fullName>DML_Statements_Max__c</fullName>
    <description>The maximum DML statements value from the related snapshots</description>
    <label>DML Statements Max</label>
    <summarizedField>Limit_Tracker_Snapshot__c.DML_Statements__c</summarizedField>
    <summaryForeignKey>Limit_Tracker_Snapshot__c.Limit_Tracker__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>