force-app/main/default/objects/Limit_Tracker__c/fields/Heap_Alert_Change__c.field-meta.xml
<CustomField>
    <fullName>Heap_Alert_Change__c</fullName>
    <description>If the heap consumption increases by this percentage between snapshots raise an alert.</description>
    <label>Heap Alert Change</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>