force-app/main/default/objects/Limit_Tracker__c/fields/Heap_Alert_Threshold_1__c.field-meta.xml
<CustomField>
    <fullName>Heap_Alert_Threshold_1__c</fullName>
    <description>Alert if the heap consumption exceeds this threshold</description>
    <label>Heap Alert Threshold 1</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>