force-app/main/default/objects/Limit_Tracker__c/fields/Heap_Last__c.field-meta.xml
<CustomField>
    <fullName>Heap_Last__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The last recorded heap value.</description>
    <label>Heap Last</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>