force-app/main/default/objects/Limit_Tracker__c/fields/Heap_Max__c.field-meta.xml
<CustomField>
    <fullName>Heap_Max__c</fullName>
    <description>The maximum heap value from the related snapshots.</description>
    <label>Heap Max</label>
    <summarizedField>Limit_Tracker_Snapshot__c.Heap__c</summarizedField>
    <summaryForeignKey>Limit_Tracker_Snapshot__c.Limit_Tracker__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>