force-app/main/default/objects/Limit_Tracker__c/fields/Last_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Last_Snapshot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The last snapshot recorded for this limit tracker.</description>
    <label>Last Snapshot</label>
    <referenceTo>Limit_Tracker_Snapshot__c</referenceTo>
    <relationshipLabel>Limit Trackers</relationshipLabel>
    <relationshipName>Limit_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>