force-app/main/default/objects/Limit_Tracker__c/fields/SOQL_Queries_Alert_Change__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Queries_Alert_Change__c</fullName>
    <description>If the SOQL query consumption increases by this percentage between snapshots raise an alert.</description>
    <label>SOQL Queries Alert Change</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>