force-app/main/default/objects/Limit_Tracker__c/fields/SOQL_Queries_Last__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Queries_Last__c</fullName>
    <formula>Last_Snapshot__r.SOQL_Queries__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOQL Queries Last</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>