force-app/main/default/objects/Limit_Tracker__c/fields/SOQL_Queries_Max__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Queries_Max__c</fullName>
    <description>The maximum SOQL queries value from the related limit snapshots.</description>
    <label>SOQL Queries Max</label>
    <summarizedField>Limit_Tracker_Snapshot__c.SOQL_Queries__c</summarizedField>
    <summaryForeignKey>Limit_Tracker_Snapshot__c.Limit_Tracker__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>