force-app/main/default/objects/Limit_Tracker__c/fields/SOQL_Records_Alert_Change__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Records_Alert_Change__c</fullName>
    <description>If the SOQL record consumption increases by this percentage between snapshots raise an alert.</description>
    <label>SOQL Records Alert Change</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>