force-app/main/default/objects/Limit_Tracker__c/fields/SOQL_Records_Max__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Records_Max__c</fullName>
    <description>The maximum SOQL records value from the related snapshots.</description>
    <label>SOQL Records Max</label>
    <summarizedField>Limit_Tracker_Snapshot__c.SOQL_Records__c</summarizedField>
    <summaryForeignKey>Limit_Tracker_Snapshot__c.Limit_Tracker__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>